# 7sem

./: CMakeLists.txt  functions.cpp  functions.h  main.cpp  matrix.cpp  matrix.h  matrix_fill.cpp  matrix_fill.h  residuals.cpp  residuals.h
